SERVER-680 fix issues with --only mode